--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,8 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+include:
+  - board: pillbug
+    shield: cantor_left
+  - board: pillbug
+    shield: cantor_right
