--- a/boards/shields/cantor/cantor.zmk.yml
+++ b/boards/shields/cantor/cantor.zmk.yml
@@ -2,7 +2,7 @@ file_format: "1"
 id: cantor 
 name: Cantor
 type: shield
-url: https://github.com/foostan/crkbd/
+url: https://github.com/diepala/cantor
 requires: [blackpill]
 features:
   - keys
